fixed the launchpad pages

--- a/pages/launchpad/style.css
+++ b/pages/launchpad/style.css
@@ -5,13 +5,19 @@
 
 @font-face {
     font-family: GoogleSans;
-    src: url(../fonts/GoogleSans.TTF);
+    src: url(../../fonts/GoogleSans.TTF);
 }
 
 body {
     background-color: #181a1b;
     color: white;
     font-family: GoogleSans;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -21,7 +27,7 @@ header {
     width: 100%;
     background-color: #202324;
     padding: 10px;
-    z-index: 9999; /* Ensure the header appears on top of other elements */
+    z-index: 9999;
 }
 
 #panel {
@@ -30,7 +36,7 @@ header {
 }
 
 #content {
-    background-color: #202324; /* Updated background color */
+    background-color: #202324;
     padding: 20px;
 }
 
@@ -42,7 +48,7 @@ header {
 
 #links li {
     display: inline;
-    margin-right: 100px; /* Increased margin-right */
+    margin-right: 100px;
 }
 
 #links li:last-child {
@@ -78,53 +84,43 @@ header {
 }
 
 #main-content {
-    margin-top: 100px;
-    padding: 20px;
-    position: relative;
     display: flex;
-    font-family: GoogleSans;
+    width: 100%;
+    height: calc(100vh - 60px);
+    padding-top: 60px;
+    box-sizing: border-box;
+}
+
+#sectionleft, #sectionright {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #sectionleft {
-    width: 60%;
-    padding-bottom: 13%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: GoogleSans;
 }
 
-.video {
-    position: relative;
-    top: 25%;
-    font-family: GoogleSans;
-}
-
-#sectionright {
-    margin-top: 10%;
-    width: 40%;
-    padding-bottom: 13%;
-    padding-right: 8%;
-    display: inline;
+.video-wrapper {
+    display: flex;
     justify-content: center;
     align-items: center;
-    font-family: GoogleSans;
-}
-
-.dwlbutton {
+    width: 80%; /* Adjust the width of the video container */
+    padding-top: 45%; /* Maintain aspect ratio (16:9) with padding-top */
     position: relative;
-    left: 28%;
-    top: 50%;
-    width: 200px;
-    height: 60px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 195, 255);
-    font-family: GSBold;
-    font-size: 24px;
 }
 
-.dwlbutton:hover {
-    cursor: pointer;
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .title {
@@ -132,7 +128,8 @@ header {
     text-align: center;
     text-decoration: none;
     font-family: GSBold;
-    color: white
+    color: white;
+    margin-bottom: 10px;
 }
 
 .author {
@@ -140,5 +137,22 @@ header {
     text-align: center;
     text-decoration: none;
     font-family: GoogleSans;
-    color: white
+    color: white;
+    margin-bottom: 30px;
+}
+
+.dwlbutton {
+    width: 200px;
+    height: 60px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 195, 255);
+    font-family: GSBold;
+    font-size: 24px;
+    text-align: center;
+    line-height: 60px;
+    margin-top: 20px;
+}
+
+.dwlbutton:hover {
+    cursor: pointer;
 }
