--- a/pages/launchpad.css
+++ b/pages/launchpad.css
@@ -88,28 +88,36 @@ header {
     border: solid;
     border-radius: 10px;
     border-color: #4e4e4e;
-    justify-content: center;
-    justify-items: center;
+    display: flex; /* Make sure the content inside is centered */
+    flex-direction: column; /* Stack the content vertically */
     align-items: center;
     font-family: GoogleSans;
+    overflow: hidden; /* Ensure no content overflows the container */
+}
+
+.entry img {
+    width: 100%; /* Ensure the image fits the width of the entry */
+    height: auto; /* Maintain the aspect ratio */
+    display: block; /* Remove any extra space below the image */
+    object-fit: cover; /* This ensures that the image fills the container, trimming if necessary */
 }
 
 .entry .title {
     font-size: 24px;
     text-align: center;
-    text-decoration: none;
     font-family: GSBold;
-    color: white
+    color: white;
+    margin-top: 10px; /* Optional: Add some spacing between the image and title */
 }
 
 .entry span {
-    margin-bottom: 50px;
+    margin-top: 10px; /* Add some spacing between the title and the span */
     font-size: 20px;
     text-align: center;
-    text-decoration: none;
     color: white;
     font-family: GoogleSans;
 }
+
 
 a {
     text-decoration: none;
